--- a/src/views/stories/StoryListItem.scss
+++ b/src/views/stories/StoryListItem.scss
@@ -19,11 +19,16 @@
 
 	&-cover {
 		.st-Image {
-			width: 48px;
-			height: 36px;
-			margin-right: 12px;
-			border-radius: 4px;
-			object-fit: cover;
+			&-container {
+				width: 48px;
+				height: 36px;
+				margin-right: 12px;
+				border-radius: 4px;
+			}
+
+			&-full {
+				object-fit: cover;
+			}
 
 			&-fallback {
 				width: 48px;
