[StoryPicker]: added publicationState in request [UserAvatar, UserSettings]: changed object fit of image

--- a/src/views/user/UserAvatar.scss
+++ b/src/views/user/UserAvatar.scss
@@ -1,6 +1,10 @@
 @import 'styles/variables.scss';
 
 .st-UserAvatar {
+	.st-Image-full {
+		object-fit: cover;
+	}
+
 	.st-Image-container,
 	.badge {
 		width: 40px;
