--- a/src/views/user/UserSettings.scss
+++ b/src/views/user/UserSettings.scss
@@ -15,11 +15,13 @@
 			display: flex;
 			justify-content: center;
 
-			.st-Image,
-			.st-Image-fallback {
-				border-radius: 50%;
-				height: 200px;
-				width: 200px;
+			.st-Image {
+				&-container,
+				&-fallback {
+					border-radius: 50%;
+					height: 200px;
+					width: 200px;
+				}
 			}
 		}
 	}
