--- a/src/components/widgets/loadmore/LoadMore.scss
+++ b/src/components/widgets/loadmore/LoadMore.scss
@@ -5,11 +5,8 @@
 .st-LoadMore {
 	&-modal {
 		max-height: 500px;
-		overflow-y: hidden;
-
-		&:hover {
-			overflow-y: auto;
-		}
+		height: 100%;
+		overflow-y: auto;
 
 		@include scrollbars(6px, $color-grey-lighter, $color-grey-border);
 	}
