--- a/src/DeletedStory.scss
+++ b/src/DeletedStory.scss
@@ -1,4 +1,5 @@
 @import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-DeletedStory {
 	display: flex;
@@ -17,6 +18,14 @@
 		flex: 1 1 0;
 		display: flex;
 		justify-content: center;
+
+		svg {
+			> path {
+				&:first-child {
+					@include theme-aware('fill', 'B400');
+				}
+			}
+		}
 
 		@media (max-width: $breakpoint-sm) {
 			margin-top: 36px;
