--- a/src/components/nav/DesktopNav.scss
+++ b/src/components/nav/DesktopNav.scss
@@ -9,7 +9,7 @@
 	position: sticky !important;
 	z-index: 1;
 	top: 0;
-	@include theme-aware('background', 'body-background');
+	@include theme-aware('background', 'B200');
 
 	.st-Loader {
 		height: 100vh;
@@ -34,7 +34,7 @@
 			position: absolute;
 			width: 10px;
 			height: 100%;
-			@include theme-aware('background', 'body-background');
+			@include theme-aware('background', 'B200');
 		}
 
 		&:before {
@@ -68,10 +68,11 @@
 		justify-content: flex-end;
 
 		.st-IconButton {
-			margin-right: 12px;
+			margin-right: 24px;
+			width: 112px;
 
 			&-link {
-				margin-right: 16px;
+				margin-right: 24px;
 			}
 
 			&:last-child {
@@ -139,11 +140,11 @@
 		.nav-item {
 			.nav-link {
 				font-size: 16px;
-				color: $color-grey-light;
+				@include theme-aware('color', 'G400');
 				text-decoration: none;
 				font-weight: bold;
 				padding: 8px 12px;
-				margin-right: 36px;
+				margin-right: 24px;
 				border-radius: 6px;
 
 				@media (max-width: $breakpoint-m) {
@@ -160,11 +161,11 @@
 				}
 
 				&:hover {
-					@include theme-aware('background-color', 'sidebar-link-background-hover');
+					@include theme-aware('background-color', 'B100');
 				}
 
 				&.active {
-					color: $color-primary;
+					@include theme-aware('color', 'T600');
 				}
 
 				.fa {
