--- a/src/components/widgets/icon/Icon.scss
+++ b/src/components/widgets/icon/Icon.scss
@@ -7,11 +7,11 @@
 	align-items: center;
 	width: 100%;
 	height: 100%;
-	@include theme-aware('background-color', 'icon-background');
+	@include theme-aware('background-color', 'B300');
 
 	svg {
 		path {
-			@include theme-aware('fill', 'icon-color');
+			@include theme-aware('fill', 'B400');
 		}
 	}
 }
