--- a/src/components/widgets/image/Image.scss
+++ b/src/components/widgets/image/Image.scss
@@ -11,7 +11,7 @@
 	&-container {
 		position: relative;
 		overflow: hidden;
-		background: rgba(0, 0, 0, 0.05);
+		@include theme-aware('background', 'B200');
 		display: block;
 		height: 100%;
 	}
@@ -36,6 +36,6 @@
 		background-color: transparent;
 		width: 100%;
 		height: 100%;
-		@include theme-aware('border', 'story-item-border');
+		@include theme-aware('border', 'G100');
 	}
 }
