--- a/src/components/widgets/loadmore/LoadMore.scss
+++ b/src/components/widgets/loadmore/LoadMore.scss
@@ -1,14 +1,14 @@
 @import 'styles/variables.scss';
 @import 'styles//scrollbar.scss';
 @import 'styles/mixins/tab-links.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-LoadMore {
 	&-modal {
 		max-height: 500px;
 		height: 100%;
 		overflow-y: auto;
-
-		@include scrollbars(6px, $color-grey-lighter, $color-grey-border);
+		@include scrollbars(6px, 'G200', 'G100');
 	}
 
 	&-pagination {
