--- a/src/components/widgets/pickers/language/LanguagePicker.scss
+++ b/src/components/widgets/pickers/language/LanguagePicker.scss
@@ -8,7 +8,7 @@
 	min-height: 50px;
 
 	label {
-		@include theme-aware('color', 'story-item-stats-color');
+		@include theme-aware('color', 'G600');
 		font-size: 14px;
 		margin-bottom: 4px;
 	}
@@ -18,13 +18,12 @@
 
 		&:hover,
 		&--is-focused {
-			background-color: $color-primary-light;
-			color: $color-grey-light;
+			@include theme-aware('background-color', 'B300');
 		}
 	}
 
 	&__single-value {
-		color: $color-grey-light;
+		@include theme-aware('color', 'G600');
 	}
 
 	&__placeholder {
@@ -34,17 +33,18 @@
 	&__control {
 		height: 36px;
 		cursor: pointer;
-		@include theme-aware('background', 'story-item-background');
-		@include theme-aware('border', 'story-item-border');
+		border: 1px solid;
+		@include theme-aware('background-color', 'B100');
+		@include theme-aware('border-color', 'G100');
 
 		&--menu-is-open,
 		&--is-focused {
-			box-shadow: 0 0 0 1px $color-primary;
-			border-color: $color-primary;
+			box-shadow: $focus;
+			@include theme-aware('border-color', 'T600');
 		}
 
 		&:hover {
-			border-color: $color-primary;
+			@include theme-aware('border-color', 'T600');
 		}
 	}
 }
