--- a/src/components/widgets/uploader/Uploader.scss
+++ b/src/components/widgets/uploader/Uploader.scss
@@ -6,10 +6,11 @@
 	flex-direction: column;
 	max-height: 400px;
 	border-radius: 8px;
-	padding: 20px;
+	padding: 12px;
 	justify-content: space-between;
 	min-width: 400px;
-	@include theme-aware('border', 'uploader-border');
+	border: 1px dashed;
+	@include theme-aware('border-color', 'G300');
 
 	@media (max-width: $breakpoint-sm) {
 		min-width: unset;
@@ -26,18 +27,18 @@
 
 		> span {
 			font-size: 18px;
-			color: $color-primary;
+			@include theme-aware('color', 'T600');
 			outline: none;
 
 			&:last-child {
 				font-size: 14px;
-				color: $color-grey-light;
+				@include theme-aware('color', 'G400');
 			}
 		}
 	}
 
 	&-thumbs {
-		margin-bottom: 10px;
+		// margin-bottom: 10px;
 		width: 100%;
 
 		// span {
@@ -53,6 +54,7 @@
 				width: 100%;
 				height: 200px;
 				object-fit: cover;
+				border-radius: 8px;
 			}
 
 			.st-IconButton {
@@ -65,7 +67,7 @@
 
 	&-preview {
 		position: relative;
-		margin-bottom: 10px;
+		// margin-bottom: 10px;
 		width: 100%;
 
 		.st-Image {
