--- a/src/styles/themes/mixins.scss
+++ b/src/styles/themes/mixins.scss
@@ -1,9 +1,9 @@
 @import './color-palette.scss';
 
 @mixin theme-aware($key, $color) {
-    @each $theme-name, $theme-color in $themes {
-        .theme-#{$theme-name} & {
-            #{$key}: map-get(map-get($themes, $theme-name), $color)
-        }
-    }
+	@each $theme-name, $theme-color in $themes {
+		.theme-#{$theme-name} & {
+			#{$key}: map-get(map-get($themes, $theme-name), $color);
+		}
+	}
 }
