--- a/src/views/stories/StoryListItem.scss
+++ b/src/views/stories/StoryListItem.scss
@@ -6,14 +6,14 @@
 	align-items: center;
 	min-width: $story-preview-width-small;
 	max-width: $story-preview-width-medium;
-	padding: 10px 5px;
+	padding: 8px;
 	border-radius: 6px;
-	margin: 0;
+	margin: 4px 0px;
 	cursor: pointer;
 
 	&:hover,
 	&:active {
-		@include theme-aware('background', 'story-list-background-hover');
+		@include theme-aware('background', 'B100');
 		text-decoration: none;
 	}
 
@@ -46,7 +46,7 @@
 
 	&-description {
 		span {
-			@include theme-aware('color', 'story-list-title-color');
+			@include theme-aware('color', 'G500');
 			font-family: $font-merriweather;
 			font-weight: bold;
 			font-size: 14px;
