--- a/src/views/stories/widgets/categories/Categories.scss
+++ b/src/views/stories/widgets/categories/Categories.scss
@@ -1,6 +1,7 @@
 @import 'styles/variables.scss';
 @import 'styles//scrollbar.scss';
 @import 'styles/mixins/tab-links.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-Categories {
 	width: 100%;
@@ -12,7 +13,7 @@
 	height: calc(100vh - 140px);
 	overflow-y: hidden;
 
-	@include scrollbars(6px, $color-grey-lighter, $color-grey-border);
+	@include scrollbars(6px, 'G200', 'G100');
 
 	svg {
 		margin-right: 12px;
