--- a/src/views/user/UserAvatar.scss
+++ b/src/views/user/UserAvatar.scss
@@ -1,4 +1,5 @@
 @import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-UserAvatar {
 	.st-Image-full {
@@ -10,19 +11,22 @@
 		width: 40px;
 		height: 40px;
 		border-radius: 50%;
-		// margin-right: 15px;
 		object-fit: cover;
 	}
 
 	.badge {
-		font-family: $font-merriweather;
+		font-family: $font-lato;
 		font-size: 18px;
 		font-weight: 600;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		text-transform: uppercase;
-		color: $color-white;
-		background-color: $color-primary;
+		@include theme-aware('color', 'T700');
+		@include theme-aware('background-color', 'T400');
+	}
+
+	&:hover {
+		opacity: 72%;
 	}
 }
