--- a/src/views/user/stories/MyStories.scss
+++ b/src/views/user/stories/MyStories.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-MyStories {
 	display: flex;
@@ -6,6 +7,6 @@
 
 	> span {
 		font-weight: 600;
-		color: $color-grey-cream;
+		@include theme-aware('color', 'G500');
 	}
 }
