--- a/src/views/stories/StoryListItem.scss
+++ b/src/views/stories/StoryListItem.scss
@@ -8,7 +8,7 @@
 	max-width: $story-preview-width-medium;
 	padding: 8px;
 	border-radius: 6px;
-	margin: 4px 0px;
+	margin: 4px 0;
 	cursor: pointer;
 
 	&:hover,
