--- a/src/components/widgets/loader/Loader.scss
+++ b/src/components/widgets/loader/Loader.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/variables.scss';
-@import '../../../styles/themes/mixins.scss';
+@import 'styles/variables.scss';
+@import 'styles/themes/mixins.scss';
 
 .st-Loader {
 	display: flex;
