--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -52,7 +52,7 @@ $box-shadow-card-dark: 2px 2px 12px rgba(35, 31, 26, 0.99);
 
 // BUTTON SHADOW
 
-$primary-button-shadow: 0px 2px 2px rgba(35, 31, 26, 0.04), 0px 1px 0px 1px #c98f2c,
+$primary-button-shadow: 0px 2px 2px rgba(35, 31, 26, 0.04), 0px 1px 0px 1px $color-gold-48,
 	0px 2px 4px rgba(35, 31, 26, 0.12);
 
 $box-shadow-btn: 0px 0px 0px 1px rgba(35, 31, 26, 0.02), 0px 2px 4px rgba(35, 31, 26, 0.08);
