--- a/src/views/login/Password.scss
+++ b/src/views/login/Password.scss
@@ -1,13 +1,7 @@
-@import '../../styles/variables.scss';
+@import 'styles/variables.scss';
 @import 'styles/themes/mixins.scss';
 
 .st-Password {
-	// max-width: 480px;
-	// padding: 20px;
-	// margin: 40px auto;
-	// display: flex;
-	// flex-direction: column;
-
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
